syntax = "proto3";

package reports.v1;

option go_package = "proto/gen/reports/v1;reportsv1";

import "google/api/annotations.proto";

service ReportsService {
  // List available reports
  rpc ListReports(ListReportsRequest) returns (ListReportsResponse) {
    option (google.api.http) = {
      get: "/v1/reports"
    };
  }

  // Get a report by id
  rpc GetReport(GetReportRequest) returns (GetReportResponse) {
    option (google.api.http) = {
      get: "/v1/reports/{id}"
    };
  }
}

message ListReportsRequest {}

message ListReportsResponse {
  repeated ReportItem items = 1;
}

message GetReportRequest {
  string id = 1;
}

message GetReportResponse {
  ReportItem report = 1;
}

message ReportItem {
  string id = 1;
  string title = 2;
  string created_at = 3;
}

